# grafikaprojekt

./: .gitignore
pv112c/: CMakeLists.txt
pv112c/framework/include/: camera.hpp  mesh.hpp  program.hpp
pv112c/framework/src/: camera.cpp  mesh.cpp
pv112c/projekt/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
pv112c/projekt/objects/: house.c4d  house.mtl  housereduced.c4d  projekt.mtl
pv112c/projekt/shaders/: main.frag  main.vert  skybox.frag  skybox.vert
pv112c/seminar01/: main.cpp
pv112c/seminar01/shaders/: main.frag  main.vert
pv112c/seminar02/: Application.cpp  Application.hpp  CMakeLists.txt
pv112c/seminar03/: Application.cpp
pv112c/seminar03/shaders/: main.frag
pv112c/seminar03_final/: Application.cpp
pv112c/seminar04/: Application.cpp
pv112c/seminar04/shaders/: main.frag
pv112c/seminar04_final/: Application.cpp  guma.mtl
pv112c/seminar04_final/shaders/: main.frag
pv112c/seminar05/: Application.cpp  Application.hpp
pv112c/seminar05/shaders/: main.frag  main.vert  postprocess.frag  postprocess.vert
